# net-struct-serde

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: sample.rs  simple.rs
net-struct-derive/: Cargo.toml
net-struct-derive/src/: err.rs  helper.rs  lib.rs  net_enum.rs  net_struct.rs  test.rs
net-struct-derive/src/net_enum/: impl_de.rs  impl_into.rs  impl_ser.rs  impl_tryfrom.rs  variants.rs
net-struct-derive/src/net_struct/: cmp.rs  field.rs  parser.rs  serializer.rs
src/: de.rs  deque.rs  err.rs  flavour.rs  lib.rs  ser.rs  traits.rs
tests/: phantom.rs  phantom2.rs  reverse.rs  reverse2.rs  sample.rs  simple.rs  test.rs  to_vec.rs
tests/enums/: simple.rs
tests/structs/: mod.rs  phantom.rs  phantom2.rs  reverse.rs  reverse2.rs  sample.rs  simple.rs
