[package]
name = "net_struct_serde"
authors = ["jianxun-p"]
version = "0.1.0"
edition = "2021"
description = "serde for network protocols structures."
license = "MIT"

[dependencies]
serde = "1"
heapless = "0.8.*"
embedded-io = "0.6.*"
net-struct-derive = {path = "net-struct-derive"}

[features]
default = []
no_std = []
